# Yurampi

./: .gitignore  README.md  main.py  pyproject.toml  series.html  test.html
config/: bs4.py  constant.py  lifespan.py
dependencies/: session.py
routes/: router.py
routes/yuramanga/: controller.py  parser.py  router.py  schemas.py
