[project]
name = "yurampi"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "BanDroid", email = "bandroid_1@proton.me"},
]
dependencies = ["fastapi[standard]>=0.115.12", "beautifulsoup4>=4.13.3", "html5lib>=1.1", "aiohttp>=3.11.14", "requests>=2.32.3"]
requires-python = ">=3.11.11"
readme = "README.md"
license = {text = "MIT"}


[tool.setuptools]
py-modules = []


[tool.pdm]
distribution = false
